// Entity-related client requests.

syntax = "proto3";

package dungeon.c2s;

option java_multiple_files = true;
option java_package = "core.network.proto.c2s";
option java_outer_classname = "EntityProto";

// Client-to-server: Request entity spawn information.
// Maps to: core.network.messages.c2s.RequestEntitySpawn
message RequestEntitySpawn {
  // ID of the entity to request spawn data for.
  int32 entity_id = 1;
}
